chore: added default params for required extension fields

--- a/extension.yaml
+++ b/extension.yaml
@@ -57,6 +57,7 @@ params:
     example: path/to/firestore_collection
     validationRegex: "^[^/]+(/[^/]+/[^/]+)*$"
     validationErrorMessage: Firestore collection paths must be an odd number of segments separated by slashes, e.g. "path/to/firestore_collection".
+    default: typesense
     required: true
     immutable: true
   - param: FIRESTORE_COLLECTION_FIELDS
@@ -79,12 +80,13 @@ params:
     description: >-
       An Typesense API key with admin permissions.
       Click on "Generate API Key" in cluster dashboard in Typesense Cloud
-    example: ''
+    example: ""
     required: true
   - param: TYPESENSE_COLLECTION_NAME
     label: Typesense Collection Name
     description: >-
       Typesense collection name to index data into
+    default: companies
     required: true
   - param: LOCATION
     label: Cloud Functions location
