--- a/test-params.local.env
+++ b/test-params.local.env
@@ -1,6 +1,6 @@
 LOCATION=us-central1
 FIRESTORE_COLLECTION_PATH=books
-FIRESTORE_COLLECTION_FIELDS=author,title
+FIRESTORE_COLLECTION_FIELDS=author,title,rating,isAvailable,location,createdAt
 TYPESENSE_HOSTS=localhost
 TYPESENSE_PORT=8108
 TYPESENSE_PROTOCOL=http
