--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "@babel/runtime": "^7.14.0",
     "firebase-admin": "^9.9.0",
     "firebase-functions": "^3.14.1",
+    "flat": "^5.0.2",
     "typesense": "^1.2.1"
   },
   "devDependencies": {
