--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,19 @@ jobs:
       - restore_cache:
           key: dependency-cache-v1-{{ checksum "package-lock.json" }}
       - run:
-          name: 'Install specific version of node'
-          command: circleci-install nodejs 14.18.0 && sudo -H -i -u ${CIRCLECI_USER} nvm alias default 14.18.0
+          name: Install node@14.18.0, npm and yarn
+          command: |
+            set +e
+            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+            export NVM_DIR="/opt/circleci/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            nvm install v14.18.0
+            nvm use v14.18.0
+            npm install --global yarn
+
+            echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
+            echo "[ -s \"$NVM_DIR/nvm.sh\" ] && . \"$NVM_DIR/nvm.sh\"" >> $BASH_ENV
+            echo 'nvm use v14.18.0' >> $BASH_ENV
       - run:
           name: npm install
           command: npm install
