--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
           name: npm install
           command: npm install
       - run:
-          name: npm install -g firebase-tools
-          command: npm install -g firebase-tools
+          name: npm install -g firebase-tools@10.5.0
+          command: npm install -g firebase-tools@10.5.0
       - run:
           name: Enable extension dev
           command: firebase --open-sesame extdev
