--- a/extension.yaml
+++ b/extension.yaml
@@ -1,5 +1,5 @@
 name: firestore-typesense-search
-version: 0.4.1
+version: 0.4.2
 specVersion: v1beta  # Firebase Extensions specification version (do not edit)
 
 displayName: Search Firestore with Typesense
@@ -32,7 +32,7 @@ resources:
   - name: backfillToTypesenseFromFirestore
     description: >-
       A function that backfills data from a Firestore collection into Typesense,
-      triggered when a Firestore document with the path `typesense_sync/trigger` has the contents of `backfill: true`.
+      triggered when a Firestore document with the path `typesense_sync/backfill` has the contents of `trigger: true`.
     type: firebaseextensions.v1beta.function
     properties:
       runtime: nodejs14
