--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,14 +44,8 @@ jobs:
           paths:
             - ./functions/node_modules
       - run:
-          name: npm run test:ci
-          command: npm run test:ci
-          environment:
-            JEST_JUNIT_OUTPUT_DIR: "reports/junit/js-test-results.xml"
-      - store_test_results:
-          path: reports/junit
-      - store_artifacts:
-          path: reports/junit
+          name: npm run test
+          command: npm run test
 
 workflows:
   integration_tests:
