--- a/extension.yaml
+++ b/extension.yaml
@@ -1,5 +1,5 @@
 name: firestore-typesense-search
-version: 0.4.2
+version: 1.0.0-rc.1
 specVersion: v1beta # Firebase Extensions specification version (do not edit)
 
 displayName: Search Firestore with Typesense
