--- a/extension.yaml
+++ b/extension.yaml
@@ -73,26 +73,13 @@ params:
     example: field1,field2,field3
     default: ""
     required: false
-  - param: FLATTEN_NESTED_DOCUMENTS
-    label: Flatten Nested Documents
-    description: >-
-      Should nested documents in Firestore be flattened before they are indexed in Typesense? 
-      Set to "Yes" for Typesense versions 0.23.1 and earlier.
-    type: select
-    options:
-      - label: No
-        value: false
-      - label: Yes
-        value: true
-    default: false
-    required: false
   - param: TYPESENSE_HOSTS
     label: Typesense Hosts
     description: >-
       A comma-separated list of Typesense Hosts.
       For single node clusters, a single hostname is sufficient. For multi-node Highly Available or SDN Clusters,
       please be sure to mention all hostnames.
-    example: xyz-1.a1.typesense.net,xyz-2.a1.typesense.net,xyz-3.a1.typesense.net
+    example: xyz.a1.typesense.net,xyz-1.a1.typesense.net,xyz-2.a1.typesense.net,xyz-3.a1.typesense.net
     required: true
   - param: TYPESENSE_API_KEY
     label: Typesense API Key
@@ -105,9 +92,22 @@ params:
   - param: TYPESENSE_COLLECTION_NAME
     label: Typesense Collection Name
     description: >-
-      Typesense collection name to index data into
+      Typesense collection name to index data into. This collection needs to exist before this extension is installed. Please create it via the Typesense Cloud dashboard or API.
     default: companies
     required: true
+  - param: FLATTEN_NESTED_DOCUMENTS
+    label: Flatten Nested Documents
+    description: >-
+      Should nested documents in Firestore be flattened by this extension before they are indexed in Typesense? 
+      Set to "Yes" for Typesense versions 0.23.1 and earlier. Set to "No" for Typesense versions 0.24.0 and later.
+    type: select
+    options:
+      - label: No
+        value: false
+      - label: Yes
+        value: true
+    default: false
+    required: false
   - param: LOCATION
     label: Cloud Functions location
     description: >-
