--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,12 @@ jobs:
         with:
           node-version: 16.20.2
           cache: npm
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/firebase/emulators
+          key: ${{ runner.os }}-firebase-emulators
+      - run: npm install
       - run: npm install -g firebase-tools@10.5.0
       - run: firebase --open-sesame extdev
       - run: cd functions && npm install
