Upgrade to node 18

--- a/extensions/test-params.example.env
+++ b/extensions/test-params.example.env
@@ -4,4 +4,4 @@ FIRESTORE_COLLECTION_FIELDS=author,title
 FLATTEN_NESTED_DOCUMENTS=true
 TYPESENSE_HOSTS=xxx-1.a1.typesense.net
 TYPESENSE_COLLECTION_NAME=books
-TYPESENSE_API_KEY=xyz
+TYPESENSE_API_KEY=projects/9258397723/secrets/ext-firestore-typesense-search-TYPESENSE_API_KEY/versions/1
