--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.20.2
+          node-version: 18.17.1
           cache: npm
       - uses: actions/cache@v3
         with:
@@ -17,7 +17,6 @@ jobs:
             ~/.cache/firebase/emulators
           key: ${{ runner.os }}-firebase-emulators
       - run: npm install
-      - run: npm install -g firebase-tools@10.5.0
-      - run: firebase --open-sesame extdev
+      - run: npm install -g firebase-tools
       - run: cd functions && npm install
       - run: npm run test -- --ci --color
