--- a/firebase.json
+++ b/firebase.json
@@ -3,21 +3,40 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ],
-    "source": "functions"
-  },
   "emulators": {
     "functions": {
-      "port": 5001
+      "port": 5001,
+      "host": "127.0.0.1"
     },
     "firestore": {
-      "port": 5002
+      "port": 8080,
+      "host": "127.0.0.1"
     },
     "ui": {
       "enabled": true
+    },
+    "extensions": {
+
+    },
+    "singleProjectMode": true
+  },
+  "extensions": {
+    "firestore-typesense-search": "."
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "functions",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint",
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
     }
-  }
+  ]
 }
