--- a/package.json
+++ b/package.json
@@ -5,27 +5,26 @@
     "emulator": "firebase ext:dev:emulators:start --test-params=test-params.env --import=emulator_data",
     "export": "firebase emulators:export emulator_data",
     "test": "npm run test-part-1 && npm run test-part-2",
-    "test-part-1": "DOTENV_CONFIG=test-params-flatten-nested-true.local.env firebase ext:dev:emulators:exec --test-params=test-params-flatten-nested-true.local.env 'jest --testPathIgnorePatterns=test/indexToTypesenseOnFirestoreWriteWithoutFlattening.spec.js'",
-    "test-part-2": "DOTENV_CONFIG=test-params-flatten-nested-true.local.env firebase ext:dev:emulators:exec --test-params=test-params-flatten-nested-false.local.env 'jest --testPathPattern=test/indexToTypesenseOnFirestoreWriteWithoutFlattening.spec.js'",
-    "typesenseServer": "mkdir -p $(pwd)/typesense-server-data && docker run -i -p 8108:8108 -v$(pwd)/typesense-server-data/:/data typesense/typesense:0.25.0 --data-dir /data --api-key=xyz --listen-port 8108 --enable-cors",
+    "test-part-1": "cp -f extensions/test-params-flatten-nested-true.local.env extensions/firestore-typesense-search.env.local && NODE_OPTIONS=--experimental-vm-modules DOTENV_CONFIG=extensions/test-params-flatten-nested-true.local.env firebase emulators:exec 'jest --testPathIgnorePatterns=test/indexToTypesenseOnFirestoreWriteWithoutFlattening.spec.js'",
+    "test-part-2": "cp -f extensions/test-params-flatten-nested-false.local.env extensions/firestore-typesense-search.env.local && NODE_OPTIONS=--experimental-vm-modules DOTENV_CONFIG=extensions/test-params-flatten-nested-false.local.env firebase emulators:exec 'jest --testPathPattern=test/indexToTypesenseOnFirestoreWriteWithoutFlattening.spec.js'",
+    "typesenseServer": "mkdir -p $(pwd)/typesense-server-data && docker run -i -p 8108:8108 -v$(pwd)/typesense-server-data/:/data typesense/typesense:0.25.1 --data-dir /data --api-key=xyz --listen-port 8108 --enable-cors",
     "lint": "eslint . --fix"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "src/index.js",
   "devDependencies": {
-    "dotenv": "^10.0.0",
-    "eslint": "^7.27.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.52.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-admin": "^9.9.0",
-    "firebase-functions": "^3.14.1",
-    "firebase-functions-test": "^0.2.3",
-    "jest": "^27.0.3",
-    "jest-dev-server": "^4.4.0",
-    "jest-junit": "^12.1.0",
-    "typesense": "^1.7.1"
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.4.1",
+    "firebase-functions-test": "^3.1.0",
+    "jest": "^29.7.0",
+    "jest-dev-server": "^9.0.1",
+    "jest-junit": "^16.0.0",
+    "typesense": "^1.7.2"
   },
-  "private": true,
-  "dependencies": {}
+  "private": true
 }
