--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,4 +19,7 @@ jobs:
       - run: npm install
       - run: npm install -g firebase-tools
       - run: cd functions && npm install
-      - run: npm run test -- --ci --color
+      - name: Run Tests
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: npm run test -- --ci --color
