--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firebase-typesense-search-extension",
   "description": "Firebase extension that indexes Firestore documents into Typesense",
   "scripts": {
-    "emulator": "firebase ext:dev:emulators:start --test-params=test-params.env --import=emulator_data",
+    "emulator": "DOTENV_CONFIG=extensions/test-params-flatten-nested-false.local.env firebase emulators:start --import=emulator_data",
     "export": "firebase emulators:export emulator_data",
     "test": "npm run test-part-1 && npm run test-part-2",
     "test-part-1": "cp -f extensions/test-params-flatten-nested-true.local.env extensions/firestore-typesense-search.env.local && NODE_OPTIONS=--experimental-vm-modules DOTENV_CONFIG=extensions/test-params-flatten-nested-true.local.env firebase emulators:exec --only functions,firestore,extensions 'jest --testPathIgnorePatterns=test/indexToTypesenseOnFirestoreWriteWithoutFlattening.spec.js'",
