--- a/extensions/test-params.example.env
+++ b/extensions/test-params.example.env
@@ -1,6 +1,7 @@
 LOCATION=us-central1
 FIRESTORE_COLLECTION_PATH=books
 FIRESTORE_COLLECTION_FIELDS=author,title
+TYPESENSE_FIELDS_RENAMES=id:book_id
 FLATTEN_NESTED_DOCUMENTS=true
 TYPESENSE_HOSTS=xxx-1.a1.typesense.net
 TYPESENSE_COLLECTION_NAME=books
