--- a/test-params-flatten-nested-true.local.env
+++ b/test-params-flatten-nested-true.local.env
@@ -1,6 +1,7 @@
 LOCATION=us-central1
 FIRESTORE_COLLECTION_PATH=books
 FIRESTORE_COLLECTION_FIELDS=author,title,rating,isAvailable,location,createdAt,nested_field,tags,nullField,ref
+TYPESENSE_FIELDS_RENAMES=id:book_id
 FLATTEN_NESTED_DOCUMENTS=true
 TYPESENSE_HOSTS=localhost
 TYPESENSE_PORT=8108
