fix: cannot parse null value
- use optional chaining to prevent error when accessing geopoint property
- configure eslint & prettier
- install `cross-env` to run scripts on Windows
- use a `docker-compose.yml` file to avoid `The syntax of the command is incorrect.` error on Windows
- uninstall `jest-dev-server` and instead use Github actions services

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "semi": true,
   "singleQuote": false,
-  "useTabs": false
+  "useTabs": false,
+  "tabWidth": 2,
+  "bracketSpacing": false,
+  "endOfLine": "lf",
+  "printWidth": 200
 }
