--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,8 +5,7 @@ on: [push, pull_request_target]
 jobs:
   # Source: https://iterative.ai/blog/testing-external-contributions-using-github-actions-secrets
   authorize:
-    environment:
-      ${{ github.event_name == 'pull_request_target' &&
+    environment: ${{ github.event_name == 'pull_request_target' &&
       github.event.pull_request.head.repo.full_name != github.repository &&
       'sandbox' || 'internal' }}
     runs-on: ubuntu-latest
@@ -16,6 +15,17 @@ jobs:
   build_and_test:
     needs: authorize
     runs-on: ubuntu-latest
+    services:
+      typesense:
+        image: typesense/typesense:27.0
+        ports:
+          - 8108:8108/tcp
+        volumes:
+          - /tmp/typesense-server-data:/data
+        env:
+          TYPESENSE_DATA_DIR: /data
+          TYPESENSE_API_KEY: xyz
+          TYPESENSE_ENABLE_CORS: true
     steps:
       - uses: actions/checkout@v3
         with:
@@ -34,7 +44,7 @@ jobs:
       - run: cd functions && npm install
       - name: Run ESLint
         run: npm run lint
-        continue-on-error: false  # Ensure the workflow fails if ESLint fails
+        continue-on-error: false # Ensure the workflow fails if ESLint fails
       - name: Run Tests
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
