--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase-functions": "^5.0.1",
     "firebase-functions-test": "^3.3.0",
     "jest": "^29.7.0",
+    "jest-dev-server": "^10.1.0",
     "jest-junit": "^16.0.0",
     "typesense": "^1.8.2"
   },
