--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^12.2.0",
     "firebase-functions": "^5.0.1",
     "flat": "^6.0.1",
+    "lodash.get": "^4.4.2",
     "typesense": "^1.8.2"
   },
   "devDependencies": {
