chore(lint): integrate prettier with eslint config
- add `eslint-config-prettier` to resolve formatting conflicts
- remove duplicate `.eslintrc.js` from `functions` directory
- extend eslint config with prettier in root config file

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
     "firebase-functions-test": "^3.4.0",
+    "eslint-config-prettier": "^10.0.1",
     "jest": "^29.7.0",
     "jest-dev-server": "^10.1.0",
     "jest-junit": "^16.0.0",
