--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.17.1
+          node-version: 'lts/*'
           cache: npm
       - uses: actions/cache@v3
         with:
