--- a/extension.yaml
+++ b/extension.yaml
@@ -19,7 +19,7 @@ billingRequired: true
 resources:
   - name: indexOnWrite
     description: A function that indexes data into Typesense when it's triggered by Firestore changes
-    type: firebaseextensions.v1beta.v2function
+    type: firebaseextensions.v1beta.v2.function
     properties:
       sourceDirectory: functions
       buildConfig:
@@ -40,7 +40,7 @@ resources:
     description: >-
       A function that backfills data from a Firestore collection into Typesense,
       triggered when a Firestore document with the path `typesense_sync/backfill` has the contents of `trigger: true`.
-    type: firebaseextensions.v1beta.v2function
+    type: firebaseextensions.v1beta.v2.function
     properties:
       buildConfig:
         runtime: nodejs22
