--- a/extension.yaml
+++ b/extension.yaml
@@ -31,7 +31,7 @@ resources:
         triggerRegion: ${LOCATION}
         eventFilters:
           - attribute: database
-            value: "(default)"
+            value: projects/${param:PROJECT_ID}/databases/(default)/locations/${param:FIRESTORE_DATABASE_LOCATION}
           - attribute: document
             value: ${FIRESTORE_COLLECTION_PATH}/{documentID}
             operator: match-path-pattern
@@ -53,7 +53,7 @@ resources:
         triggerRegion: ${LOCATION}
         eventFilters:
           - attribute: database
-            value: "(default)"
+            value: projects/${param:PROJECT_ID}/databases/(default)/locations/${param:FIRESTORE_DATABASE_LOCATION}
           - attribute: document
             value: typesense_sync/backfill
             operator: match-path-pattern
@@ -121,6 +121,12 @@ params:
         value: true
     default: false
     required: false
+  - param: FIRESTORE_DATABASE_LOCATION
+    label: Firestore Database Location
+    description: >-
+      The location of your Firestore database (e.g., nam5 for North America, eur3 for Europe).
+      You can find this by running 'gcloud firestore databases list'.
+    required: true
   - param: LOG_TYPESENSE_INSERTS
     label: Log Typesense Inserts for Debugging
     description: >-
