--- a/extensions/test-params-subcategory-flatten-nested-false.local.env
+++ b/extensions/test-params-subcategory-flatten-nested-false.local.env
@@ -1,4 +1,5 @@
 LOCATION=us-central1
+FIRESTORE_DATABASE_REGION=nam5
 FIRESTORE_COLLECTION_PATH=users/{personId}/books
 TEST_FIRESTORE_PARENT_COLLECTION_PATH=users
 TEST_FIRESTORE_PARENT_ID=123
