--- a/extensions/test-params.example.env
+++ b/extensions/test-params.example.env
@@ -1,4 +1,5 @@
 LOCATION=us-central1
+FIRESTORE_DATABASE_REGION=nam5
 FIRESTORE_COLLECTION_PATH=books
 FIRESTORE_COLLECTION_FIELDS=author,title
 FLATTEN_NESTED_DOCUMENTS=true
