--- a/extensions/test-params-flatten-nested-false.local.env
+++ b/extensions/test-params-flatten-nested-false.local.env
@@ -1,4 +1,5 @@
 LOCATION=us-central1
+FIRESTORE_DATABASE_REGION=nam5
 FIRESTORE_COLLECTION_PATH=books
 FIRESTORE_COLLECTION_FIELDS=author,title,rating,isAvailable,location,createdAt,nested_field,tags,nullField,ref
 FLATTEN_NESTED_DOCUMENTS=false
