Add firestore function location

--- a/extension.yaml
+++ b/extension.yaml
@@ -21,6 +21,7 @@ resources:
     description: A function that indexes data into Typesense when it's triggered by Firestore changes
     type: firebaseextensions.v1beta.v2function
     properties:
+      location: ${LOCATION}
       sourceDirectory: functions
       buildConfig:
         runtime: nodejs22
@@ -42,6 +43,7 @@ resources:
       triggered when a Firestore document with the path `typesense_sync/backfill` has the contents of `trigger: true`.
     type: firebaseextensions.v1beta.v2function
     properties:
+      location: ${LOCATION}
       buildConfig:
         runtime: nodejs22
       sourceDirectory: functions
